test/invalid/baseline/nonnullableany.txt
Syntax error at line 2 in nonnullableany.webidl, since `interface NonNullable`:
  attribute any? foo;
                 ^ Type `any` cannot be made nullable
